# codelib

./: README
Algorithms/Interviewstreet/Find_Strings/: Find_Strings.html  output.sample  pass-1-7.c  pass-5-7.cc  pass-7-7.cc
Autotools/: .gitignore  README
Autotools/jupiter-chapter2/: Makefile
Autotools/jupiter-chapter2/src/: Makefile  main.c
Autotools/jupiter-chapter3/: Makefile.in  autogen.sh  configure.ac
Autotools/jupiter-chapter3/src/: Makefile.in  main.c
Autotools/jupiter-chapter4/: Makefile.am  configure.ac
Autotools/jupiter-chapter4/common/: Makefile.am  jupcommon.h  print.c
Autotools/jupiter-chapter4/src/: Makefile.am  jupiter  main.c
Autotools/jupiter-chapter5/: Makefile.am  configure.ac
Autotools/jupiter-chapter5/common/: jupcommon.h  print.c
Autotools/jupiter-chapter5/include/: libjupiter.h
Autotools/jupiter-chapter5/libjup/: Makefile.am  jup_print.c
Autotools/jupiter-chapter5/src/: Makefile.am  main.c  module.h
Autotools/jupiter-chapter5/src/modules/: Makefile.am
Autotools/jupiter-chapter5/src/modules/hithere/: hithere.c
MetaPost/: .latexmkrc  MetaPost-Examples.tex  example.mp  example_boxes.mp
OpenSSL/: OpenSSL-Notes.md
configurations/hadoop/: core-site.xml  hdfs-site.xml  mapred-site.xml
configurations/hive/: hive-site.xml
configurations/home/: .mrxvtrc  .profile  .screenrc  .screenrc.2
configurations/iptables/: iptables.rules
configurations/latexmk/: .latexmkrc
